--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,8 +11,8 @@
     </div>
     <div class="footer__inner">
         <div class="footer__content">
-            <span>Powered by <a href="http://gohugo.io">Hugo</a></span>
-            <span>Made with &#10084; by <a href="https://github.com/rhazdon">Djordje Atlialp</a></span>
+            <span>Powered by <a href="http://gohugo.io">Hugo</a> | Theme by <a href="https://github.com/rhazdon">Djordje Atlialp</a></span>
+            <span>Made with &#10084; by <a href="https://github.com/hackstream">Karan and Sarat</a></span>
         </div>
     </div>
 </footer>
